Update design and translate content to Indonesian

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">About Me</h2>
-                <p class="section-subtitle">Get to know me better</p>
+                <h2 class="section-title">Tentang Saya</h2>
+                <p class="section-subtitle">Kenali saya lebih dekat</p>
             </div>
             <div class="about-content">
                 <div class="about-text">
@@ -568,7 +568,7 @@
                             <img src="Project/E-commerce Desian website.png" alt="E-commerce Website Design">
                             <div class="project-overlay">
                                 <button class="project-link view-detail-btn" onclick="openModal('ecommerce-web-modal')" title="View Details"><i class="fas fa-eye"></i></button>
-                                <a href="https://github.com/ravysholihin" class="project-link" title="View Code"><i class="fab fa-github"></i></a>
+                                <a href="https://github.com/ravysholihinn" class="project-link" title="View Code"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                         <div class="project-content">
@@ -1418,13 +1418,13 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('exam-browser-modal')">&times;</span>
             <div class="modal-header">
-                <h2>Exam Browser Installation at MAN 2</h2>
+                <h2>Instalasi Exam Browser di MAN 2</h2>
             </div>
             <div class="modal-body">
-                <img src="Project/Project_Hardware/projectexam.jpg" alt="Exam Browser Installation" class="modal-image">
+                <img src="Project/Project_Hardware/projectexam.jpg" alt="Instalasi Exam Browser" class="modal-image">
                 <div class="modal-details">
-                    <h3>Project Overview</h3>
-                    <p>Installation and configuration of Exam Browser software at MAN 2 Pekanbaru for secure online examination system. The project ensured a secure testing environment for national examinations.</p>
+                    <h3>Gambaran Proyek</h3>
+                    <p>Instalasi dan konfigurasi perangkat lunak Exam Browser di MAN 2 Pekanbaru untuk sistem ujian online yang aman. Proyek ini memastikan lingkungan ujian yang aman untuk pelaksanaan ujian nasional.</p>
                     
                     <h3>Installation Process</h3>
                     <ul>
