--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Jl. Suka Karya, Perumahan Graha Bangun Permai, Blok A No.16, Pekanbaru, Indonesia</span>
+                            <span>Jl. Suka Karya, Perumahan Bumi Mandala 2, Blok R No.7, Pekanbaru, Indonesia</span>
                         </div>
                     </div>
                 </div>
